--- a/style.css
+++ b/style.css
@@ -10,6 +10,24 @@ body {
   background-color: white;
 }
 
+.divider {
+  width: 100%;
+  height: 1px;
+  margin: 36px 0;
+  background-color: black;
+}
+
+main div img {
+  height: 375px;
+  object-fit: cover;
+  margin-top: 44px;
+}
+
+img {
+  border-radius: 28px;
+  width: 100%;
+}
+
 h3 {
   color: #E1624F;
   text-align: left;
@@ -19,6 +37,14 @@ p {
  color: #333333;
 }
 
+ul li::marker {
+  color: #333333;
+}
+
 footer {
   color :#333333;
+  display: flex;
+  word-wrap: break-word;
+  text-align: center;
+
 }
