--- a/style.css
+++ b/style.css
@@ -1,15 +1,32 @@
 body {
   background-image: url(assets/bg.png);
   background-size: cover;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
 #page {
   box-sizing: border-box;
   width: 1300px;
+  margin: auto;
   padding: 80px;
   background-color: white;
 }
 
+img {
+  border-radius: 28px;
+  width: 100%;
+  height: auto;
+}
+
+/* Imagem do conteúdo */
+.conteudo-img {
+  margin-top: 44px;
+  height: 375px;
+  object-fit: cover;
+}
+
+/* Separador */
 .divider {
   width: 100%;
   height: 1px;
@@ -17,24 +34,19 @@ body {
   background-color: black;
 }
 
-main div img {
-  height: 375px;
-  object-fit: cover;
-  margin-top: 44px;
-}
-
-img {
-  border-radius: 28px;
-  width: 100%;
-}
-
+/* Títulos */
 h3 {
   color: #E1624F;
   text-align: left;
 }
 
+/* Texto geral */
 p {
- color: #333333;
+  color: #333333;
+}
+
+.centralizar {
+  text-align: center;
 }
 
 ul li::marker {
@@ -42,9 +54,8 @@ ul li::marker {
 }
 
 footer {
-  color :#333333;
-  display: flex;
-  word-wrap: break-word;
+  color: #333333;
   text-align: center;
-
+  padding: 40px;
+  font-size: 14px;
 }
